gen/nl/tudelft/intelligoal/core/language/module/grammer/ModuleParser.java
// This is a generated file. Not intended for manual editing.
package nl.tudelft.intelligoal.core.language.module.grammer;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static nl.tudelft.intelligoal.core.language.module.grammer.ModuleTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ModuleParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACTION) {
      r = action(b, 0);
    }
    else if (t == ACTION_COMBO) {
      r = actionCombo(b, 0);
    }
    else if (t == ADOPT_ACTION) {
      r = adoptAction(b, 0);
    }
    else if (t == BASIC_TERM) {
      r = basicTerm(b, 0);
    }
    else if (t == BLOCK) {
      r = block(b, 0);
    }
    else if (t == CALLABLE) {
      r = callable(b, 0);
    }
    else if (t == CALLABLE_MODULE) {
      r = callableModule(b, 0);
    }
    else if (t == DELETE_ACTION) {
      r = deleteAction(b, 0);
    }
    else if (t == DROP_ACTION) {
      r = dropAction(b, 0);
    }
    else if (t == FILE_REFERENCE) {
      r = fileReference(b, 0);
    }
    else if (t == IDENTIFIER) {
      r = identifier(b, 0);
    }
    else if (t == INSERT_ACTION) {
      r = insertAction(b, 0);
    }
    else if (t == LIST) {
      r = list(b, 0);
    }
    else if (t == MACRO_DEF) {
      r = macroDef(b, 0);
    }
    else if (t == MODULE_CLAUSE) {
      r = moduleClause(b, 0);
    }
    else if (t == MODULE_NAME) {
      r = moduleName(b, 0);
    }
    else if (t == MOOD) {
      r = mood(b, 0);
    }
    else if (t == NUMBER) {
      r = number(b, 0);
    }
    else if (t == OPERATOR) {
      r = operator(b, 0);
    }
    else if (t == OPTION) {
      r = option(b, 0);
    }
    else if (t == PREDICATE) {
      r = predicate(b, 0);
    }
    else if (t == PREDICATE_ACTION) {
      r = predicateAction(b, 0);
    }
    else if (t == QUERY) {
      r = query(b, 0);
    }
    else if (t == QUERY_LIST) {
      r = queryList(b, 0);
    }
    else if (t == RULE) {
      r = rule(b, 0);
    }
    else if (t == SELECTOR) {
      r = selector(b, 0);
    }
    else if (t == SEND_ACTION) {
      r = sendAction(b, 0);
    }
    else if (t == STRING) {
      r = string(b, 0);
    }
    else if (t == TERM) {
      r = term(b, 0);
    }
    else if (t == TERM_LIST) {
      r = termList(b, 0);
    }
    else if (t == USAGE) {
      r = usage(b, 0);
    }
    else if (t == USE_CLAUSE) {
      r = useClause(b, 0);
    }
    else if (t == VARIABLE_LIST) {
      r = variableList(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return moduleFile(b, l + 1);
  }

  /* ********************************************************** */
  // selectorAction | generalAction | predicateAction
  public static boolean action(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION, "<action>");
    r = selectorAction(b, l + 1);
    if (!r) r = generalAction(b, l + 1);
    if (!r) r = predicateAction(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // action ('+' action)*
  public static boolean actionCombo(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionCombo")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_COMBO, "<action combo>");
    r = action(b, l + 1);
    r = r && actionCombo_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('+' action)*
  private static boolean actionCombo_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionCombo_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!actionCombo_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actionCombo_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // '+' action
  private static boolean actionCombo_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionCombo_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    r = r && action(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // block | (actionCombo '.')
  static boolean actionSet(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionSet")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block(b, l + 1);
    if (!r) r = actionSet_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // actionCombo '.'
  private static boolean actionSet_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionSet_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = actionCombo(b, l + 1);
    r = r && consumeToken(b, DOT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'adopt' '(' termList ')'
  public static boolean adoptAction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adoptAction")) return false;
    if (!nextTokenIs(b, ADOPT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ADOPT, OPAREN);
    r = r && termList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, ADOPT_ACTION, r);
    return r;
  }

  /* ********************************************************** */
  // predicate | VARIABLE | number | string | '(' termList ')' | list
  public static boolean basicTerm(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicTerm")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASIC_TERM, "<term>");
    r = predicate(b, l + 1);
    if (!r) r = consumeToken(b, VARIABLE);
    if (!r) r = number(b, l + 1);
    if (!r) r = string(b, l + 1);
    if (!r) r = basicTerm_4(b, l + 1);
    if (!r) r = list(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' termList ')'
  private static boolean basicTerm_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicTerm_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPAREN);
    r = r && termList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'bel' '(' termList ')'
  static boolean belQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "belQuery")) return false;
    if (!nextTokenIs(b, BEL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, BEL, OPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, termList(b, l + 1));
    r = p && consumeToken(b, CPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // op_disjunction | op_bar | op_implies | op_soft_implies | op_lt | op_unify | op_univ | op_variant | op_not_variant | op_evaluates | op_leq | op_identical | op_not_identical | op_gt | op_ge | op_general_lt | op_general_le | op_general_gt | op_general_ge | op_not_unify | op_partial_unification | op_colon | op_plus | op_minus | op_bitwise_and | op_bitwise_or | op_mult | op_div | op_int_div | op_bitshift_left | op_bitshift_right | op_pow | op_pow2 | op_as | op_not_identical2 | ATOM
  static boolean binaryOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryOperator")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_disjunction(b, l + 1);
    if (!r) r = op_bar(b, l + 1);
    if (!r) r = op_implies(b, l + 1);
    if (!r) r = op_soft_implies(b, l + 1);
    if (!r) r = op_lt(b, l + 1);
    if (!r) r = op_unify(b, l + 1);
    if (!r) r = op_univ(b, l + 1);
    if (!r) r = op_variant(b, l + 1);
    if (!r) r = op_not_variant(b, l + 1);
    if (!r) r = op_evaluates(b, l + 1);
    if (!r) r = op_leq(b, l + 1);
    if (!r) r = op_identical(b, l + 1);
    if (!r) r = op_not_identical(b, l + 1);
    if (!r) r = op_gt(b, l + 1);
    if (!r) r = op_ge(b, l + 1);
    if (!r) r = op_general_lt(b, l + 1);
    if (!r) r = op_general_le(b, l + 1);
    if (!r) r = op_general_gt(b, l + 1);
    if (!r) r = op_general_ge(b, l + 1);
    if (!r) r = op_not_unify(b, l + 1);
    if (!r) r = op_partial_unification(b, l + 1);
    if (!r) r = op_colon(b, l + 1);
    if (!r) r = op_plus(b, l + 1);
    if (!r) r = op_minus(b, l + 1);
    if (!r) r = op_bitwise_and(b, l + 1);
    if (!r) r = op_bitwise_or(b, l + 1);
    if (!r) r = op_mult(b, l + 1);
    if (!r) r = op_div(b, l + 1);
    if (!r) r = op_int_div(b, l + 1);
    if (!r) r = op_bitshift_left(b, l + 1);
    if (!r) r = op_bitshift_right(b, l + 1);
    if (!r) r = op_pow(b, l + 1);
    if (!r) r = op_pow2(b, l + 1);
    if (!r) r = op_as(b, l + 1);
    if (!r) r = op_not_identical2(b, l + 1);
    if (!r) r = consumeToken(b, ATOM);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' rule+ '}'
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, OPEN_CURLY)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, null);
    r = consumeToken(b, OPEN_CURLY);
    p = r; // pin = 1
    r = r && report_error_(b, block_1(b, l + 1));
    r = p && consumeToken(b, CLOSE_CURLY) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // rule+
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = rule(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!rule(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_1", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ATOM ['(' variableList ')']
  public static boolean callable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callable")) return false;
    if (!nextTokenIs(b, ATOM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATOM);
    r = r && callable_1(b, l + 1);
    exit_section_(b, m, CALLABLE, r);
    return r;
  }

  // ['(' variableList ')']
  private static boolean callable_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callable_1")) return false;
    callable_1_0(b, l + 1);
    return true;
  }

  // '(' variableList ')'
  private static boolean callable_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callable_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPAREN);
    r = r && variableList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // moduleName ['(' variableList ')']
  public static boolean callableModule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableModule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALLABLE_MODULE, "<callable module>");
    r = moduleName(b, l + 1);
    r = r && callableModule_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['(' variableList ')']
  private static boolean callableModule_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableModule_1")) return false;
    callableModule_1_0(b, l + 1);
    return true;
  }

  // '(' variableList ')'
  private static boolean callableModule_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableModule_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPAREN);
    r = r && variableList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'delete' '(' termList ')'
  public static boolean deleteAction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deleteAction")) return false;
    if (!nextTokenIs(b, DELETE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DELETE, OPAREN);
    r = r && termList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, DELETE_ACTION, r);
    return r;
  }

  /* ********************************************************** */
  // 'drop' '(' termList ')'
  public static boolean dropAction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dropAction")) return false;
    if (!nextTokenIs(b, DROP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DROP, OPAREN);
    r = r && termList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, DROP_ACTION, r);
    return r;
  }

  /* ********************************************************** */
  // '(' nakedTerm ')'
  static boolean enclosedTerm(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enclosedTerm")) return false;
    if (!nextTokenIs(b, "<term>", OPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<term>");
    r = consumeToken(b, OPAREN);
    r = r && nakedTerm(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'exit' '=' EXIT_VAL '.'
  static boolean exitProperty(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exitProperty")) return false;
    if (!nextTokenIs(b, EXIT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, EXIT, EQ, EXIT_VAL, DOT);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // string | VARIABLE | ATOM
  public static boolean fileReference(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fileReference")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FILE_REFERENCE, "<file reference>");
    r = string(b, l + 1);
    if (!r) r = consumeToken(b, VARIABLE);
    if (!r) r = consumeToken(b, ATOM);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'focus' '=' FOCUS_VAL '.'
  static boolean focusProperty(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "focusProperty")) return false;
    if (!nextTokenIs(b, FOCUS)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, FOCUS, EQ, FOCUS_VAL, DOT);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'forall' queryList 'do' actionSet
  static boolean forallRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forallRule")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, FORALL);
    p = r; // pin = 1
    r = r && report_error_(b, queryList(b, l + 1));
    r = p && report_error_(b, consumeToken(b, DO)) && r;
    r = p && actionSet(b, l + 1) && r;
    exit_section_(b, l, m, r, p, recover_rule_parser_);
    return r || p;
  }

  /* ********************************************************** */
  // 'exit-module' | logAction | printAction
  static boolean generalAction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generalAction")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXIT_MODULE);
    if (!r) r = logAction(b, l + 1);
    if (!r) r = printAction(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ('goal' | 'a-goal' | 'goal-a') '(' termList ')'
  static boolean goalQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "goalQuery")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = goalQuery_0(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, consumeToken(b, OPAREN));
    r = p && report_error_(b, termList(b, l + 1)) && r;
    r = p && consumeToken(b, CPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // 'goal' | 'a-goal' | 'goal-a'
  private static boolean goalQuery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "goalQuery_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, GOAL);
    if (!r) r = consumeToken(b, AGOAL);
    if (!r) r = consumeToken(b, GOALA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ATOM | VARIABLE | 'true' | 'define' | 'module' | 'order' | 'exit' | 'focus' | 'bel' | 'percept' | 'goal' | 'if' | 'then' | 'forall' | 'do' | 'listall' | 'send' | 'sent' | 'log' | 'print' | 'insert' | 'delete' | 'adopt' | 'drop' | BASIC_USAGE_VAL | ORDER_VAL | EXIT_VAL | FOCUS_VAL | SELECTOR_VAL | 'not'
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER, "<identifier>");
    r = consumeToken(b, ATOM);
    if (!r) r = consumeToken(b, VARIABLE);
    if (!r) r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, DEFINE);
    if (!r) r = consumeToken(b, MODULE);
    if (!r) r = consumeToken(b, ORDER);
    if (!r) r = consumeToken(b, EXIT);
    if (!r) r = consumeToken(b, FOCUS);
    if (!r) r = consumeToken(b, BEL);
    if (!r) r = consumeToken(b, PERCEPT);
    if (!r) r = consumeToken(b, GOAL);
    if (!r) r = consumeToken(b, IF);
    if (!r) r = consumeToken(b, THEN);
    if (!r) r = consumeToken(b, FORALL);
    if (!r) r = consumeToken(b, DO);
    if (!r) r = consumeToken(b, LISTALL);
    if (!r) r = consumeToken(b, SEND);
    if (!r) r = consumeToken(b, SENT);
    if (!r) r = consumeToken(b, LOG);
    if (!r) r = consumeToken(b, PRINT);
    if (!r) r = consumeToken(b, INSERT);
    if (!r) r = consumeToken(b, DELETE);
    if (!r) r = consumeToken(b, ADOPT);
    if (!r) r = consumeToken(b, DROP);
    if (!r) r = consumeToken(b, BASIC_USAGE_VAL);
    if (!r) r = consumeToken(b, ORDER_VAL);
    if (!r) r = consumeToken(b, EXIT_VAL);
    if (!r) r = consumeToken(b, FOCUS_VAL);
    if (!r) r = consumeToken(b, SELECTOR_VAL);
    if (!r) r = consumeToken(b, NOT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'if' queryList 'then' actionSet
  static boolean ifRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifRule")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, IF);
    p = r; // pin = 1
    r = r && report_error_(b, queryList(b, l + 1));
    r = p && report_error_(b, consumeToken(b, THEN)) && r;
    r = p && actionSet(b, l + 1) && r;
    exit_section_(b, l, m, r, p, recover_rule_parser_);
    return r || p;
  }

  /* ********************************************************** */
  // 'insert' '(' termList ')'
  public static boolean insertAction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "insertAction")) return false;
    if (!nextTokenIs(b, INSERT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, INSERT, OPAREN);
    r = r && termList(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, INSERT_ACTION, r);
    return r;
  }

  /* ********************************************************** */
  // 'not' '(' simpleQuery ')'
  static boolean invertedQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "invertedQuery")) return false;
    if (!nextTokenIs(b, NOT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, NOT, OPAREN);
    r = r && simpleQuery(b, l + 1);
    r = r && consumeToken(b, CPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' termList ']'
  public static boolean list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "list")) return false;
    if (!nextTokenIs(b, OBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OBRACKET);
    r = r && termList(b, l + 1);
    r = r && consumeToken(b, CBRACKET);
    exit_section_(b, m, LIST, r);
    return r;
  }
